[gd_scene load_steps=10 format=2]

[ext_resource path="res://Pirate Blocks/cannonLarge.gltf" type="PackedScene" id=1]
[ext_resource path="res://cannonLarge.gd" type="Script" id=2]
[ext_resource path="res://green_material.tres" type="Material" id=3]

[sub_resource type="CubeMesh" id=2]
material = ExtResource( 3 )
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -0.05, 0.05, 0.05, 0.05, 0.05, -0.05, 0.05, 0.05, 0.05, -0.05, 0.05, -0.05, -0.05, -0.05, 0.05, 0.05, -0.05, -0.05, 0.05, -0.05, 0.05, -0.05, -0.05, -0.05, 0.05, 0.05, 0.05, -0.05, 0.05, -0.05, 0.05, 0.05, -0.05, -0.05, 0.05, 0.05, 0.05, -0.05, 0.05, -0.05, -0.05, -0.05, 0.05, -0.05, -0.05, -0.05, -0.05, 0.05, 0.05, 0.05, 0.05, -0.05, -0.05, 0.05, -0.05, 0.05, 0.05, 0.05, -0.05, 0.05, 0.05, 0.05, -0.05, -0.05, -0.05, -0.05, -0.05, 0.05, -0.05, 0.05, -0.05, -0.05 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.584314, 0.694118, 0.933333, 1 )

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.501961, 1, 0, 1 )

[sub_resource type="CubeMesh" id=5]
material = SubResource( 4 )
size = Vector3( 0.1, 0.1, 0.1 )

[node name="cannonLarge" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="cannonLarge 2" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.331894, 0 )

[node name="Button_Right" type="Area" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.20885 )

[node name="MeshInstance" type="MeshInstance" parent="Button_Right" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.350068, 0.00140826, -0.000661214 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Button_Right" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.350054, 0, 0 )
shape = SubResource( 3 )

[node name="Button_Left" type="Area" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.707574, 0, 0.201967 )

[node name="MeshInstance" type="MeshInstance" parent="Button_Left" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.350068, 0.00140826, -0.000661214 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Button_Left" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.350054, 0, 0 )
shape = SubResource( 3 )

[node name="Button_Up" type="Area" parent="." index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.351252, 0.249986, 0.201182 )

[node name="MeshInstance" type="MeshInstance" parent="Button_Up" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.350068, 0.00140826, -0.000661214 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Button_Up" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.350054, 0, 0 )
shape = SubResource( 3 )

[node name="Button_Down" type="Area" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.351252, -0.136875, 0.202354 )

[node name="MeshInstance" type="MeshInstance" parent="Button_Down" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.350068, 0.00140826, -0.000661214 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Button_Down" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.350054, 0, 0 )
shape = SubResource( 3 )

[node name="BallDropper" type="Area" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.566342, 0.141628, 0.202354 )

[node name="MeshInstance" type="MeshInstance" parent="BallDropper" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.347698, 0.00378898, -0.000908658 )
mesh = SubResource( 7 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="BallDropper" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.350054, 0, 0 )
shape = SubResource( 3 )

[node name="Button_Fire" type="Area" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.351252, 0.0307533, 0.202354 )

[node name="MeshInstance" type="MeshInstance" parent="Button_Fire" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.350068, 0.00140826, -0.000661209 )
mesh = SubResource( 5 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Button_Fire" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.350054, 0, 0 )
shape = SubResource( 3 )
[connection signal="area_entered" from="Button_Right" to="." method="_on_Button_Right_area_entered"]
[connection signal="area_entered" from="Button_Left" to="." method="_on_Button_Left_area_entered"]
[connection signal="area_entered" from="Button_Up" to="." method="_on_Button_Up_area_entered"]
[connection signal="area_entered" from="Button_Down" to="." method="_on_Button_Down_area_entered"]
[connection signal="area_entered" from="BallDropper" to="." method="_on_BallDropper_area_entered"]
[connection signal="area_entered" from="Button_Fire" to="." method="_on_Button_Fire_area_entered"]
